# Poser

./: 1  Cargo.toml  README.md  build.rs  entity.rs  entity_query.rs  event-log  main.rs  node.rs  poser.rs
benches/: query_benchmark.rs
proto/: poser.proto
src/: controller.rs  lib.rs  main.rs  poser.rs  server.rs
src/domain/: bound.rs  entity.rs  mod.rs
src/grpc/: controller.rs  mapper.rs  mod.rs
src/node/: entity_iterator.rs  entity_query.rs  mod.rs  node_impl.rs
src/service/: entity_query.rs  mod.rs  service_impl.rs
