[package]
name = "poser"
version = "0.1.0"
authors = ["Richard Hart <richardhart92@gmail.com>"]
edition = "2018"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "poser"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"
unchecked_unwrap = "3.0.0"

[[bench]]
name = "query_benchmark"
harness = false

[dependencies]
rstar = "0.2.0"
uuid = "0.8.2"
